// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`если пришел флаг "только чат" правильно нарисует компонент 1`] = `
<HoveredTooltip
  className="PersonalMessage__tooltip_fix_width"
  defaultPadding={true}
  directions={
    Array [
      "bottom-center",
    ]
  }
  isVisible={false}
  mainOffset={10}
  onOpen={[MockFunction]}
  popupTheme="dark"
  secondaryOffset={-10}
  showTimeout={200}
  tooltipContent="Продавцу неудобно принимать звонки. Напишите в чат, чтобы задать вопросы по объявлению и обсудить детали."
>
  <Button
    className="PersonalMessage PersonalMessage_width_default PersonalMessage_type_button PersonalMessage_chat_only"
    color="green"
    disabled={false}
    onClick={[MockFunction]}
    size="l"
    type="button"
    width="full"
  >
    <div
      className="PersonalMessage__content"
    >
      <IconSvg
        className="PersonalMessage__icon PersonalMessage__icon_color_grey"
        id="svgID"
        size="24"
      />
      <span
        className="PersonalMessage__caption"
      >
        Написать сообщение
      </span>
    </div>
  </Button>
</HoveredTooltip>
`;

exports[`правильно нарисует компонент без флага "только чат" 1`] = `
<HoveredTooltip
  className=""
  defaultPadding={true}
  directions={
    Array [
      "bottom-center",
    ]
  }
  isVisible={false}
  mainOffset={10}
  onOpen={[MockFunction]}
  popupTheme="dark"
  secondaryOffset={-10}
  showTimeout={200}
  tooltipContent="Отправить продавцу личное сообщение"
>
  <Button
    className="PersonalMessage PersonalMessage_width_default PersonalMessage_type_button"
    color="white"
    disabled={false}
    onClick={[MockFunction]}
    size="l"
    type="button"
    width="full"
  >
    <div
      className="PersonalMessage__content"
    >
      <IconSvg
        className="PersonalMessage__icon PersonalMessage__icon_color_grey"
        id="svgID"
        size="24"
      />
      <span
        className="PersonalMessage__caption"
      >
        Написать
      </span>
    </div>
  </Button>
</HoveredTooltip>
`;
